--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <!-- base module -->
+  <script type="module" src="scripts/store.js"></script>
+  <script type="module" src="scripts/shopping-list.js"></script>
   <script type="module" src="scripts/index.js"></script>
 </body>
 
